# stc

./: .gitattributes  CMakeLists.txt
include/: zz_ast.h  zz_binary_operators.h  zz_code_generator.h  zz_lexer.h  zz_parser.h  zz_unary_operators.h
include/ast/: zz_ast.h
include/code_generator/: zz_code_generator.h  zz_expression_generator.h  zz_function_generator.h
include/lexer/: zz_lexer.h
include/parser/: zz_parser.h
src/: zz_code_generator.c  zz_lexer.c  zz_main.c  zz_parser.c
src/code_generator/: zz_code_generator.c  zz_expression_generator.c  zz_function_generator.c
src/lexer/: zz_lexer.c
src/parser/: zz_parser.c
test_resources/: test.stc
